[package]
name = "sglab02_bin"
version = "0.1.6"
edition = "2021"
#edition = "2024"
authors = ["num-bbro <num@bbro.jp>"]
description = "num sglab02"
license = "MIT OR Apache-2.0"
homepage = "https://bbro.jp"
repository = "https://github.com/num-bbro/sglab02/tree/main/sglab02_bin"

[dependencies]
sglab02_lib = { path = "../sglab02_lib", version = "^0.1.0" }
sglib03 = { path = "../sglib03", version = "^0.1.0"}
sglib04 = { path = "../sglib04", version = "^0.1.0"}
tokio = { version = "1.36.0", features = ["full"] }

