[package]
name = "sglab02_lib"
version = "0.1.4"
edition = "2024"
authors = ["num-bbro <num@bbro.jp>"]
description = "num sglab02"
license = "MIT OR Apache-2.0"

[dependencies]
askama = { version = "0.12.1", features = ["serde", "with-axum"] }
askama_axum = "0.4.0"
axum = { version = "0.7.4", features = ["http2", "multipart"] }
bincode = "1.3.3"
chrono = "0.4.34"
#libxlsxwriter-sys = "1.1.5"
plotters = "0.3.5"
regex = "1.10.3"
serde = { version = "1.0.196", features = ["derive"] }
thousands = "0.2.0"
tokio = { version = "1.36.0", features = ["full"] }
toml = "0.8.10"
uuid = { version = "1.7.0", features = ["v4"] }
#xlsxwriter = "0.6.0"
shapefile = "0.4.0"
dbase = "0.3.0"
financial = "1.1.5"
micromath = "2.1.0"
calamine = "0.25.0"
tis620 = "0.1.1"
encoding_rs = "0.8.34"
csv = "1.3.0"
quick-xml = "0.36.2"
imageproc = "0.25.0"
image = "0.25.5"
rusttype = "0.9.3"
tokio-util = "0.7.13"
http-body-util = "0.1.2"
anyhow = "1.0.94"
dotenv = "0.15.0"
ab_glyph = "0.2.29"

