[package]
name = "sglib03"
version = "0.1.0"
edition = "2024"
authors = ["num-bbro <num@bbro.jp>"]
description = "num sglab02"
license = "MIT OR Apache-2.0"
homepage = "https://bbro.jp"
repository = "https://github.com/num-bbro/sglab02/tree/main/sglab02_bin"


[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
sglab02_lib = { path = "../sglab02_lib", version = "^0.1.0" }
chrono = "0.4.39"
regex = "1.10.3"
csv = "1.3.1"
askama = { version = "0.12.1", features = ["serde", "with-axum"] }
askama_axum = "0.4.0"
#axum = { version = "0.8.1", features = ["http2", "multipart"] }
axum = { version = "0.7.4", features = ["http2", "multipart"] }
#axum = { version = "0.8.4", features = ["http2", "multipart"] }
tokio = { version = "1.36.0", features = ["full"] }
imageproc = "0.25.0"
image = "0.25.5"
ab_glyph = "0.2.29"
rusttype = "0.9.3"
num-traits = "0.2.19"
finance-math = "0.0.1"
thousands = "0.2.0"
numfmt = "1.1.1"

